kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'

    # Replace with your ACM certificate ARN
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<REGION>:<ACCOUNT-ID>:certificate/<CERTIFICATE-ID>

    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # ECK Kibana service uses HTTPS
    alb.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  ingressClassName: alb

  rules:
    - host: kibana.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
